--- a/css/styles.css
+++ b/css/styles.css
@@ -33,7 +33,7 @@ body {
     margin: 0 auto;
 }
 
-.header .container {
+.header__container {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -43,18 +43,22 @@ body {
 
 }
 
-.menu ul {
+.menu__list {
     list-style: none;
     display: flex;
     justify-content: space-between;
     width: 489px;
 }
 
-.menu-item a {
+.menu__link {
     text-decoration: none;
     font-size: 16px;
     color: rgb(164, 107, 0);
     line-height: 1;
+}
+
+.menu__item_active {
+    border-bottom: 1px solid gray;
 }
 
 
@@ -62,18 +66,18 @@ body {
     margin: 132px 0 81px 0;
 }
 
-.main .container {
+.main__container {
     display: flex;
     align-items: center;
     justify-content: space-between;
 
 }
 
-.main-info {
+.main__info {
     max-width: 622px;
 }
 
-.main-info h1 {
+.main__double-title {
     font-size: 45px;
     font-family: MullerExtraBold, sans-serif;
     line-height: 1.222;
@@ -84,12 +88,12 @@ body {
     color: rgb(185, 145, 80);
 }
 
-.double-title span {
+.double-title__span {
     color: #ffaf18;
 }
 
 
-.main-advantages {
+.main__advantages {
     margin-top: 13px;
     display: flex;
     flex-wrap: wrap;
@@ -103,11 +107,11 @@ body {
     margin-top: 47px;
 }
 
-.advantage-text {
+.advantage__text {
     margin-left: 16px;
 }
 
-.advantage-title {
+.advantage__title {
     font-size: 16px;
     font-family: MullerExtraBold, sans-serif;
     color: rgb(255, 175, 24);
@@ -115,19 +119,18 @@ body {
     margin-bottom: 10px;
 }
 
-.advantage-description {
+.advantage__description {
     font-size: 16px;
     color: rgb(185, 145, 80);
 }
 
-.main-action {
+.main__action {
     margin-top: 60px;
 }
 
 .btn {
     border: none;
     background-color: rgb(255, 175, 24);
-    width: 224px;
     outline: none;
     padding: 22px;
     box-sizing: border-box;
@@ -137,18 +140,23 @@ body {
     cursor: pointer;
 }
 
+.main__btn {
+    width: 224px;
+    height: 60px;
+}
+
 .products {
     padding: 80px 0 120px 0;
 }
 
-.products-title {
+.products__title {
     font-size: 35px;
     font-family: MullerBold, sans-serif;
     color: rgb(189, 152, 92);
     text-align: center;
 }
 
-.products-items {
+.products__items {
     display: flex;
     flex-wrap: wrap;
     margin-top: 35px;
@@ -165,21 +173,21 @@ body {
     margin-top: 24px;
 }
 
-.product-image {
+.product__image {
     height: 180px;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-.product-title {
+.product__title {
     font-size: 18px;
     font-family: MullerBold, sans-serif;
     color: rgb(56, 36, 0);
 }
 
 
-.product-text {
+.product__text {
     font-size: 14px;
     color: rgb(24, 26, 26);
     line-height: 1.286;
@@ -187,7 +195,7 @@ body {
     margin: 14px 0 15px 0;
 }
 
-.product-action .btn {
+.product__btn {
     width: 242px;
     height: 50px;
     padding: 17px;
@@ -198,17 +206,17 @@ body {
     overflow: hidden;
 }
 
-.order .container {
+.order__container {
     display: flex;
     align-items: end;
     justify-content: space-between;
 }
 
-.order-text {
+.order__text {
     max-width: 384px;
 }
 
-.order-text-title {
+.order__double-title {
     font-size: 35px;
     font-family: MullerExtraBold, sans-serif;
     font-weight: bold;
@@ -217,49 +225,52 @@ body {
     margin-bottom: 65px;
 }
 
-.order-text-message {
+.order__text-message {
     font-size: 16px;
     color: rgb(185, 145, 80);
     line-height: 1.5;
 }
 
-.order-form {
+.order__form {
     margin-left: 122px;
     max-width: 330px;
 }
 
-.order-input {
+.base-input {
     border-width: 1px;
     border-color: rgb(185, 145, 80);
     border-style: solid;
     background-color: rgb(255, 255, 255);
-    width: 330px;
-    height: 60px;
     font-size: 18px;
     color: rgb(119, 94, 49);
     padding: 23px 22px 24px 22px;
     outline: none;
-    margin-bottom: 24px;
     box-sizing: border-box;
 }
 
-.order-input::placeholder {
+.order__base-input {
+    width: 330px;
+    height: 60px;
+    margin-bottom: 24px;
+}
+
+.order__base-input::placeholder {
     color: rgb(203, 168, 110);
 }
 
-.order .btn {
+.order__btn {
     width: 330px;
     padding: 23px 22px 24px 22px;
     height: 60px;
 }
 
-.order-image {
+.order__image {
     width: 282px;
     position: relative;
     margin-left: 78px;
 }
 
-.order-image img {
+.order__image-img {
     position: absolute;
     bottom: -35px;
     left: 0;
@@ -271,21 +282,21 @@ body {
     padding: 16px 0 15px 0;
 }
 
-.footer .container {
+.footer__container {
     display: flex;
     align-items: center;
 }
 
-.rights {
+.footer__rights {
     font-size: 12px;
     color: rgb(186, 179, 179);
     margin-left: 358px;
 }
 
-.burger {
+.header__burger {
     display: none;
 }
 
-.close {
+.menu__close {
     display: none;
 }
